--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <script src="mines.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
